# goit-pythonweb-hw-12

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 5f9c49a31490_create_contacts_table.py
docs/source/: conf.py  schemas.rst
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/dependencies/: auth.py  roles.py
src/repository/: contacts.py
src/scripts/: create_admin.py
src/services/: auth.py  cache.py  cloudinary_service.py  contacts.py  mail.py  password_reset.py
tests/: test_auth.py  test_auth_integration.py  test_conn.py  test_contacts.py  test_contacts_integration.py  test_users_integration.py
tests/module/: test_auth.py  test_contacts.py  test_users.py
